# Mash

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp  main.qml
src/controllers/: CMakeLists.txt  hash.cpp  hash.h
